Fixed a pinned tab sizing issue when tabs were overflowing.

--- a/FirefoxEdgeDark.css
+++ b/FirefoxEdgeDark.css
@@ -262,6 +262,7 @@
 
   #tabbrowser-tabs[overflow] > .tabbrowser-tab[pinned] {
     padding-bottom: 15px !important;
+    height: 32px !important;
   }
 
   #tabbrowser-tabs[overflow] > .tabbrowser-tab[pinned] > .tab-stack {
